
plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = 16
targetCompatibility = 16

/* No longer needed with JDK 16...
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
*/

applicationName = 'AoC'
mainClassName = 'framework.AoC'
version = '0.2020'

applicationDefaultJvmArgs = [
    "-Xmx6G", "-Xms6G", "-XX:+UseParallelGC"
    //, "--enable-preview"
]

repositories {
    mavenLocal()
    jcenter()  // or alternatively: mavenCentral()
}

dependencies {
    //implementation 'au.com.bytecode:opencsv:2.4'
    implementation 'com.google.guava:guava:28.1-jre'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
}
